--- a/package.json
+++ b/package.json
@@ -7,6 +7,10 @@
     "start": "bin/www",
     "heroku-postbuild": "rollup -c"
   },
+  "repository": {
+    "type": "git",
+    "url": "https://infinite-shelf-18891.herokuapp.com"
+  },
   "author": "Ron Gajdos <rgajdos@ptc.com>",
   "license": "MIT",
   "dependencies": {
