--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "Ron Gajdos <rgajdos@ptc.com>",
   "license": "MIT",
   "dependencies": {
+    "connect-ensure-login": "^0.1.1",
     "connect-redis": "^5.0.0",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
